# liblevenshtein-cpp

./: .gitignore  CMakeLists.txt  Config.cmake.in  Doxyfile.in  LICENSE  LICENSE.txt  README.md  environment-coverage.yml  environment-demo.yml  environment-docs.yml  environment-linter.yml  environment.yml  environment_linux.yml  environment_osx.yml
.github/workflows/: cmake-multi-platform.yml  codeql.yml  deploy-static-pages.yml  generate-test-coverage.yml  linter.yml  run-demo.yml  test-macos.yml  test-ubuntu.yml  test-windows.yml
cmake/: CodeCoverage.cmake
docs/: namespaces.dox
example/: .gitignore  CMakeLists.txt  README.md  command_line.cpp  command_line.h  environment.yml  main.cpp
example/scripts/: run-demo.exp
example/src/: CMakeLists.txt  command_line.cpp  command_line.h  main.cpp
proto/: CMakeLists.txt  liblevenshtein.proto
src/: CMakeLists.txt  namespaces.dox
src/collection/: CMakeLists.txt  dawg.cpp  dawg.h  dawg_iterator.cpp  dawg_iterator.h  dawg_node.cpp  dawg_node.h  final_dawg_node.cpp  final_dawg_node.h  prefix.cpp  prefix.h  sorted_dawg.cpp  sorted_dawg.h  symmetric_immutable_pair.cpp  symmetric_immutable_pair.h  symmetric_immutable_pair.hpp  symmetric_pair.cpp  symmetric_pair.h  transition.cpp  transition.h
src/distance/: CMakeLists.txt  distance.h  memoized_distance.cpp  memoized_distance.h  merge_and_split_distance.cpp  merge_and_split_distance.h  standard_distance.cpp  standard_distance.h  transposition_distance.cpp  transposition_distance.h
src/liblevenshtein/: CMakeLists.txt
src/liblevenshtein/collection/: CMakeLists.txt  dawg.cpp  dawg.h  dawg_iterator.cpp  dawg_iterator.h  dawg_node.cpp  dawg_node.h  prefix.cpp  prefix.h  sorted_dawg.cpp  sorted_dawg.h  symmetric_pair.cpp  symmetric_pair.h  transition.cpp  transition.h
src/liblevenshtein/distance/: CMakeLists.txt  distance.cpp  distance.h  memoized_distance.cpp  memoized_distance.h  merge_and_split_distance.cpp  merge_and_split_distance.h  standard_distance.cpp  standard_distance.h  symmetric_pair.cpp  symmetric_pair.h  transposition_distance.cpp  transposition_distance.h
src/liblevenshtein/serialization/: CMakeLists.txt  serializer.cpp  serializer.h
src/liblevenshtein/transducer/: CMakeLists.txt  algorithm.h  comparator.cpp  comparator.h  distance.cpp  distance.h  intersection.cpp  intersection.h  lazy_query.cpp  lazy_query.h  merge.cpp  merge.h  position.cpp  position.h  position_transition.cpp  position_transition.h  state.cpp  state.h  state_iterator.cpp  state_iterator.h  state_transition.cpp  state_transition.h  subsumes.cpp  subsumes.h  transducer.cpp  transducer.h  unsubsume.cpp  unsubsume.h
src/liblevenshtein/utils/: CMakeLists.txt
src/serialization/: CMakeLists.txt
src/transducer/: CMakeLists.txt  algorithm.h  candidate.cpp  candidate.h  comparator.cpp  comparator.h  distance.cpp  distance.h  intersection.cpp  intersection.h  lazy_query.cpp  lazy_query.h  merge.cpp  merge.h  position.cpp  position.h  position_transition.cpp  position_transition.h  special_position.cpp  special_position.h  state.cpp  state.h  state_iterator.cpp  state_iterator.h  state_transition.cpp  state_transition.h  subsumes.cpp  subsumes.h  transducer.cpp  transducer.h  unsubsume.cpp  unsubsume.h
src/utils/: CMakeLists.txt
test/: .clang-tidy  CMakeLists.txt  main.cpp  rapidcheck.yaml  test_liblevenshtein.cpp
test/collection/: CMakeLists.txt  test_dawg_node.cpp  test_module.cpp  test_prefix.cpp  test_sorted_dawg.cpp  test_symmetric_pair.cpp  test_transition.cpp
test/config/: CMakeLists.txt  rapidcheck_parser.cpp
test/distance/: CMakeLists.txt  test_distance.cpp  test_merge_and_split_distance.cpp  test_standard_distance.cpp  test_transposition_distance.cpp
test/liblevenshtein/: CMakeLists.txt
test/liblevenshtein/collection/: CMakeLists.txt  test_dawg_node.cpp  test_module.cpp  test_prefix.cpp  test_sorted_dawg.cpp  test_symmetric_pair.cpp  test_transition.cpp
test/liblevenshtein/config/: CMakeLists.txt  rapidcheck.yaml  rapidcheck_parser.cpp  rapidcheck_parser.h
test/liblevenshtein/distance/: CMakeLists.txt  test_merge_and_split_distance.cpp  test_module.cpp  test_standard_distance.cpp  test_symmetric_pair.cpp  test_transposition_distance.cpp
test/liblevenshtein/serialization/: CMakeLists.txt  test_module.cpp  test_protobuf_serializer.cpp
test/liblevenshtein/test/: CMakeLists.txt  types.h
test/liblevenshtein/test/utils/: CMakeLists.txt  comparators.cpp  comparators.h  file_utils.cpp  file_utils.h  position_utils.cpp  position_utils.h  test_comparators.cpp
test/liblevenshtein/transducer/: CMakeLists.txt  rapidcheck.yaml  test_comparator.cpp  test_helpers.cpp  test_helpers.h  test_merge.cpp  test_state.cpp  test_transducer.cpp
test/liblevenshtein/utils/: CMakeLists.txt  file_utils.cpp  file_utils.h
test/serialization/: CMakeLists.txt  test_module.cpp
test/transducer/: CMakeLists.txt  test_merge.cpp  test_position.cpp  test_state.cpp  test_transducer.cpp
test/utils/: CMakeLists.txt
