set(MODULE_NAME "utils")

set(MODULE_SOURCES
  "MurmurHash2.cpp"
  "MurmurHash3.cpp")

file(GLOB MODULE_HEADERS "*.h")

add_library(levenshtein-${MODULE_NAME} SHARED ${MODULE_SOURCES})

set_target_properties(levenshtein-${MODULE_NAME} PROPERTIES
  VERSION ${PROJECT_VERSION}
  SOVERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR})

install(TARGETS levenshtein-${MODULE_NAME}
  EXPORT ${PROJECT_NAME}-${MODULE_NAME}
  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")

install(FILES ${MODULE_HEADERS}
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/${MODULE_NAME})
